# hlang

./: .clang-format  .gitignore  CMakeLists.txt  DEVELOPMENT.md  DEVIATIONS.md  LICENSE  README.md
benchmarks/: README.md  fib.HC  fib.c  hash.HC  hash.c  mandel.HC  mandel.c  matmul.HC  matmul.c  run_benchmarks.sh  sieve.HC  sieve.c  sort.HC  sort.c
checklist/: 01-holyc-language.md  02-scoping-linkage.md  03-preprocessor-directives-options.md  04-doc-examples.md  README.md
examples/: CompileTime.HC  Dungeon.HC  FizzBuzz.HC  HelloTemple.HC  Mandelbrot.HC  Oracle.HC  Primes.HC  README.md
lib/: HolyC.HH  README.md
runtime/: hcrt.c  hcrt.h
src/: aot.cpp  aot.hpp  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  driver.cpp  jit.cpp  jit.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  stub_compile.cpp
tests/: run_one.sh  run_tests.sh
tests/anti_c/: anti_c_class_pack.HC  anti_c_class_pack.out  anti_c_class_redef.HC  anti_c_class_redef.out  anti_c_dft_callsite.HC  anti_c_dft_callsite.out  anti_c_float_mod.HC  anti_c_float_mod.out  anti_c_fwd_extern.HC  anti_c_fwd_extern.out
tests/cases/: args.HC  args.out  arrays.HC  arrays.out  classes.HC  classes.out  control.HC  control.out  defaults.HC  defaults.out  exceptions.HC  exceptions.out  exe.HC  exe.out  floats.HC  floats.out  globals.HC  globals.out  hello.HC  hello.out  input.HC  input.in  input.out  memory.HC  memory.out  misc.HC  misc.out  mode.HC  mode.aot.out  mode.jit.out  pointers.HC  pointers.out  precedence.HC  precedence.out  preproc.HC  preproc.out  preproc_inc.HH  strings.HC  strings.out  subint.HC  (+11 more)
tests/edge/: br_break_outside.HC  br_char_too_long.HC  br_dup_label.HC  br_goto_undef.HC  br_missing_semi.HC  br_nested_func.HC  br_redef_class.HC  br_too_many_args.HC  br_unbalanced_brace.HC  br_unbalanced_paren.HC  br_undef_type.HC  br_unterm_comment.HC  br_unterm_string.HC  edge_arith.HC  edge_arith.out  edge_classes.HC  edge_classes.out  edge_control.HC  edge_control.out  edge_dup_local.HC  edge_functions.HC  edge_functions.out  edge_numbers.HC  edge_numbers.out  edge_pointers.HC  edge_pointers.out  edge_precedence.HC  edge_precedence.out  edge_recursion.HC  edge_recursion.out  edge_scoping.HC  edge_scoping.out  edge_strings.HC  edge_strings.out  edge_switch.HC  edge_switch.out
tests/errors/: asm.HC  bad_member.HC  case_outside.HC  continue.HC  define_func.HC  dollar.HC  dup_member.HC  include_angle.HC  lastclass_misuse.HC  missing_arg.HC  multi_base.HC  static_dyn_init.HC  ternary.HC  typedef.HC  undefined_fun.HC  undefined_sym.HC  unterminated_if.HC
tests/frontend/: ast.HC  ast.ast  tokens.HC  tokens.tokens
